static/library.css
/*Library and article is specific to index*/

.library {
    margin: 0vh 15vw;
}

@media (max-width:850px) {
    .library {
        margin: 0vh 3vw;
    }
}

.snippet {
    padding: 3vw 3vw;
    margin: 10vh 0vw !important;
    box-shadow: 4px 6px 10px grey;
    text-align: center;
}

.snippet img {
    /*margin: 1vh 5vw;*/
    max-width: 100%;
    position: relative;
    transform: translate(0%, -50%);
    top: 50%;

}

.snippet_text {
    position: relative;
    top: 50%;
    transform: translate(0, -50%);
}

.buttons {
    width: 100%;
    margin: 0px !important;
}

.buttons a {
    padding: 10px 10px 12px 10px;
    /*To allow for vertical alignment*/
    background-color: var(--color-4);
    border-radius: 6px;
    color: var(--color-3);
    width: 90%;
    margin: 2% 5%;
}

.buttons a:hover {
    color: var(--color-3);
}

.intro h2 {
    width: 100%
}

.hero {
    width: 100%;
    height: 60vh;
    object-fit: cover;
    /*linear-gradient: (150deg,var(--color-4) 20%, rgba(0,0,0,0));*/
}

